--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,11 @@ html {
   --shadow-for-boxes: 3px 3px 8px 0px #00000047;
 }
 
+
+p {
+  font-size: large;
+}
+
 body {
   display: grid;
   grid-template-areas:
@@ -9,6 +14,7 @@ body {
     "main main main"
     "footer footer footer"
   ;
+  gap: 100px;
 }
 
 .about-me {
@@ -26,6 +32,7 @@ body {
 }
 
 .about-me .image {
+  z-index: 2;
   height: 400px;
   grid-area: img;
   box-shadow: var(--shadow-for-boxes)
@@ -46,8 +53,8 @@ body {
   grid-area: content;
   margin: auto;
   margin-top: 60px;
-  margin-left: -25px;
-  background: aliceblue;
+  margin-left: -90px;
+  background: white;
   padding: 50px;
   box-shadow: var(--shadow-for-boxes)
 }
@@ -65,6 +72,12 @@ body {
 svg {
   width: 30px;
   height: 30px;
+  background-color: black;
+}
+
+.icons {
+  display: flex;
+  flex-direction: row-reverse;
 }
 
 .contact-info {
@@ -96,7 +109,20 @@ footer img {
 }
 
 header {
+  position: relative;
   grid-area: header;
+}
+
+header::before {
+  background-color: burlywood;
+  content: "";
+  position: absolute;
+  top: -60%;
+  z-index: -1;
+  left: -45%;
+  transform: skewY(-17deg);
+  width: 150%;
+  height: 150%;
 }
 
 main {
