--- a/styles.css
+++ b/styles.css
@@ -66,13 +66,30 @@ body {
 .cards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-template-rows: 200px 200px;
+  grid-template-rows: 1fr 1fr;
+  gap: 30px;
+}
+
+.cards .project img {
+  width: 100%;
+  height: 150px;
+}
+
+.project-title {
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.project-title h3 {
+  margin-right: auto;
 }
 
 svg {
   width: 30px;
   height: 30px;
   background-color: black;
+  margin-left: 10px !important;
 }
 
 .icons {
@@ -96,6 +113,7 @@ svg {
 
 .contact-info .contact-item {
   display: flex;
+  align-items: center;
 }
 
 .contact-info .icons {
