--- a/styles.css
+++ b/styles.css
@@ -117,6 +117,8 @@ svg {
   grid-area: contact;
   display: flex;
   flex-direction: column;
+  margin-bottom: 60px;
+  margin-top: 30px;
 }
 
 .contact-info * {
@@ -134,12 +136,19 @@ svg {
 
 .contact-info .icons {
   display: flex;
+  flex-direction: row;
+  gap: 10px;
 }
 
 
 
 footer img {
   grid-area: img;
+  width: 600px;
+  height: 500px;
+  padding: 50px;
+  margin-right: 100px;
+  margin-top: -10px;
 }
 
 header {
@@ -172,7 +181,13 @@ main .cards {
 footer {
   grid-area: footer;
   display: grid;
-  grid-template-columns: 1fr 3fr;
+  grid-template-columns: 1fr 1fr;
   grid-template-areas:
     "contact img";
+  background-color: burlywood;
+}
+
+
+footer svg {
+  margin-left: 0 !important;
 }
