--- a/styles.css
+++ b/styles.css
@@ -2,6 +2,10 @@ html {
   --shadow-for-boxes: 3px 3px 8px 0px #00000047;
 }
 
+* {
+  font-family: "Lora";
+}
+
 
 p {
   font-size: large;
@@ -88,13 +92,14 @@ body {
 }
 
 .cards .content {
-  padding: 11px;
+  padding: 15px;
 }
 
 .project-title {
   display: flex;
   align-items: center;
   width: 100%;
+  height: 10vh;
 }
 
 .project-title h3 {
