--- a/styles.css
+++ b/styles.css
@@ -48,7 +48,7 @@ body {
 .about-me .name {
   grid-area: h1;
   bottom: 70px;
-  left: 16%;
+  left: 17%;
   position: relative;
   color: white;
   text-shadow: 0px 3px 5px black;
@@ -219,3 +219,91 @@ footer i {
 i {
   font-size: 35px;
 }
+
+@media (max-width: 480px) {
+  body {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "header"
+      "main"
+      "footer"
+    ;
+  }
+
+  .about-me {
+    display: grid;
+    grid-template-areas:
+      "img"
+      "content"
+    ;
+    justify-items: center;
+  }
+
+  .about-me .name {
+    max-width: 67%;
+  }
+
+  .icons {
+    justify-content: center;
+  }
+
+  .about-me .image {
+    max-width: 100%;
+    display: block;
+  }
+
+  .about-me .content {
+    grid-area: content;
+    margin: auto;
+    margin-top: auto;
+    margin-left: auto;
+    background: none;
+    box-shadow: none;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 30px;
+    gap: 20px;
+  }
+
+  header::before {
+    background-color: burlywood;
+    content: "";
+    position: absolute;
+    top: -70%;
+    z-index: -1;
+    left: auto;
+    transform: skewY(-17deg);
+    width: 100%;
+    height: 97%;
+  }
+
+  .cards {
+    grid-template-columns: none;
+    grid-template-rows: none;
+  }
+
+  footer {
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "contact"
+      "img";
+    background-color: burlywood;
+  }
+
+  footer img {
+    max-width: 100%;
+    height: auto;
+    padding: 0px;
+    margin-right: 0px;
+    margin-top: 0px;
+  }
+
+  footer h2 {
+    align-self: center;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {}
+
+@media (min-width: 1025px) {}
